<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">kamisha_s_application11</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
<string name="lbl_here">here</string>
<string name="lbl_bed">Bed</string>
<string name="msg_see_all_people">SEE ALL PEOPLE YOU FOLLOW</string>
<string name="msg_welcome_to_unst2">Welcome to Unstuck. Unstuck is a mobile application that allows users from around the world to form a community to share solutions to problems that others seem to get stuck upon. Let\u2019s come together to help each other find solutions to help each other get \u201cUnstuck.\u201d</string>
<string name="lbl_back">Back</string>
<string name="lbl_logout">Logout</string>
<string name="msg_more_people_to">MORE PEOPLE TO FOLLOW</string>
<string name="lbl_next">Next</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account? </string>
<string name="lbl_how_to_s">How-To\u2019s</string>
<string name="lbl_salary">Salary</string>
<string name="lbl_home">Home</string>
<string name="lbl_or_login_with">OR LOGIN WITH</string>
<string name="msg_already_have_an">Already have an account? </string>
<string name="lbl_topics">Topics</string>
<string name="msg_kyle_manning_fo">Kyle Manning followed you. 
29 May</string>
<string name="msg_lorem_ipsum_dol3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
<string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
<string name="lbl_may_25_2023">May 25, 2023 </string>
<string name="lbl_3_min_read">3 min read</string>
<string name="lbl_interviews">Interviews</string>
<string name="lbl_applies_to_you">applies to you.</string>
<string name="msg_lorem_ipsum_dol4">Lorem Ipsum dolor set amet</string>
<string name="lbl_art">Art</string>
<string name="lbl_sign_in">Sign in</string>
<string name="lbl_programming">Programming</string>
<string name="msg_image_credit_d">Image Credit: Darlene Corbett via IamBackatWork</string>
<string name="msg_your_account_an">Your Account and Responsibilities</string>
<string name="msg_sign_up_with_tw">Sign up with Twitter</string>
<string name="msg_or_register_wit">OR REGISTER WITH</string>
<string name="msg_you_can_see_our2">You can see our previous Terms </string>
<string name="lbl_cover_letters">Cover Letters</string>
<string name="lbl_tricks">Tricks</string>
<string name="lbl_entrepreneur">Entrepreneur</string>
<string name="lbl_social">Social</string>
<string name="msg_sign_in_with_go">Sign in with Google</string>
<string name="msg_i_hope_that_you">I hope that you find this app inspiring, helpful, and possibly make new connections from users all over the world.</string>
<string name="lbl_family">Family</string>
<string name="msg_by_signing_up2">By signing up, you agree to our </string>
<string name="lbl_resume">Resume</string>
<string name="msg_your_personal_p">Your Personal Posts</string>
<string name="lbl_may_23_2023">may 23, 2023 </string>
<string name="lbl_technology">Technology</string>
<string name="lbl_people">People</string>
<string name="msg_enter_in_your_e">Enter in your email or username.</string>
<string name="lbl_content">CONTENT</string>
<string name="msg_sharing_of_info">Sharing of Information</string>
<string name="lbl_logo">LOGO</string>
<string name="msg_welcome_to_unst">Welcome to Unstuck</string>
<string name="msg_jane_doe_liked">Jane Doe liked your post
How to put a trampoline together. 31 May</string>
<string name="lbl_google">Google</string>
<string name="lbl_activity">Activity</string>
<string name="msg_latest_technolo">Latest Technology (2023)</string>
<string name="msg_terms_and_condi2">Terms and conditions</string>
<string name="msg_third_party_emb">Third-Party Embeds</string>
<string name="lbl_welcome">Welcome</string>
<string name="lbl_app">App</string>
<string name="msg_what_are_you_st">What are you stuck on?</string>
<string name="msg_sign_in_with_fa">Sign in with Facebook</string>
<string name="lbl_motivation">Motivation</string>
<string name="lbl_published_posts">Published Posts</string>
<string name="lbl_password">Password</string>
<string name="msg_followed_you">followed you. 
29 May</string>
<string name="lbl_16_days_ago">16 days ago</string>
<string name="lbl_kyle_manning">Kyle Manning </string>
<string name="msg_image_credit_d2">Image Credit: Darlene Corbett via </string>
<string name="msg_enter_in_passwo">Enter in password.</string>
<string name="lbl_finance">Finance</string>
<string name="lbl_explore_topics">Explore Topics</string>
<string name="msg_terms_and_condi">Terms and Conditions</string>
<string name="msg_sign_up_with_ap">Sign up with Apple</string>
<string name="lbl_science">Science</string>
<string name="msg_collection_of_i">Collection of Information</string>
<string name="lbl_your_choices">Your Choices</string>
<string name="lbl_food">Food</string>
<string name="lbl_may_17_2023">MAY 17, 2023 </string>
<string name="lbl_cryptocurrency">Cryptocurrency</string>
<string name="lbl_unstuck_topics">Unstuck Topics</string>
<string name="lbl_notifcations">Notifcations</string>
<string name="msg_top_stuck_topic">TOP STUCK TOPICS</string>
<string name="lbl_unstuck">Unstuck</string>
<string name="lbl_1_june">1 June</string>
<string name="msg_car_tips_tric">Car Tips &amp; Tricks: Changing the Oil</string>
<string name="lbl_follow">Follow</string>
<string name="lbl_tutorials">Tutorials</string>
<string name="msg_lorem_ipsum_is2">Lorem Ipsum is
 a dummy text</string>
<string name="lbl_user_guides">User Guides</string>
<string name="lbl_sign_up">Sign up.</string>
<string name="msg_register_with_f">Register with Facebook</string>
<string name="msg_register_with_g">Register with Google</string>
<string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
<string name="lbl_job_search">Job Search</string>
<string name="msg_susan_ready_res">Susan Ready responded to
How to put a trampoline together. 30 May</string>
<string name="msg_effective_june">Effective: June 1, 2023</string>
<string name="lbl_may_21_2023">may 21, 2023 </string>
<string name="lbl_for_dummies">For Dummies</string>
<string name="lbl_privacy_policy">Privacy policy</string>
<string name="lbl_politics">Politics</string>
<string name="msg_sign_up_with_go">Sign up with Google</string>
<string name="lbl_register">Register</string>
<string name="lbl_email_username">Email/Username</string>
<string name="lbl_interests">Interests</string>
<string name="lbl_may_19_2023">may 19, 2023 </string>
<string name="lbl_babies">Babies</string>
<string name="msg_tips_to_acing_t">Tips to Acing that Interview - Tips &amp; Guides</string>
<string name="msg_use_of_informat">Use of Information</string>
<string name="lbl_pets">Pets</string>
<string name="msg_responded_to_ho">responded to
How to put a trampoline together. 30 May</string>
<string name="lbl_search">Search</string>
<string name="msg_how_to_put_a_tr">How to Put a Trampoline Together by Yourself</string>
<string name="lbl_may_15_2023">MAY 15, 2023 </string>
<string name="lbl_john_doe">John Doe</string>
<string name="lbl_register_now">Register Now</string>
<string name="lbl_exit">Exit</string>
<string name="msg_by_signing_up">By signing up, you agree to our Terms of Service and
acknowledge that our Privacy Policy applies to you.</string>
<string name="lbl_login">Login</string>
<string name="lbl_health">Health</string>
<string name="lbl_jane_doe">Jane Doe </string>
<string name="msg_gardening_how">Gardening: How to Start a Garden</string>
<string name="lbl_susan_ready">Susan Ready </string>
<string name="msg_sign_up_with_fa">Sign up with Facebook</string>
<string name="lbl_following">Following</string>
<string name="lbl_more">More</string>
<string name="lbl_car_issues">Car Issues</string>
<string name="lbl_car_buying">Car Buying</string>
<string name="lbl_welcome_back">Welcome back.</string>
<string name="msg_terms_of_servic">Terms of Service and
acknowledge that our Privacy Policy </string>
<string name="msg_you_can_see_our">You can see our previous Terms here</string>
<string name="msg_lorem_ipsum_is">Lorem Ipsum is 
a dummy text</string>
<string name="msg_entrepreneur_h">Entrepreneur: How to Own Your Own Business in a Year</string>
<string name="msg_liked_your_post">liked your post
How to put a trampoline together. 31 May</string>
<string name="lbl_iambackatwork">IamBackatWork</string>
<string name="lbl_sign_up_with">Sign up with </string>
<string name="lbl_diy">DIY</string>
<string name="lbl_michael_tucker">Michael Tucker</string>
<string name="lbl_explore">Explore</string>
<string name="msg_select_a_topic">Select a topic.
Choose three or more.</string>
<string name="lbl_top_posts">Top Posts</string>
<string name="lbl_tips">Tips</string>
</resources>
