<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="customSearchVM" type="com.kamishasapplication.app.modules.customsearch.data.viewmodel.CustomSearchVM"/>
    </data>
    <FrameLayout android:id="@+id/frameCustomSearch"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStyleteal_400">
        <LinearLayout android:id="@+id/linearColumnarrowleft"
            android:layout_gravity="top|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearRowarrowleft"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageArrowleft"
                        android:layout_height="@dimen/_14pxh"
                        android:layout_marginBottom="@dimen/_16pxv"
                        android:layout_marginTop="@dimen/_18pxv"
                        android:layout_width="@dimen/_8pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowleft"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                    <androidx.appcompat.widget.SearchView
                        android:background="@drawable/rectangle_bg_white_a700_63_radius_10"
                        android:id="@+id/searchViewSearchBar"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_17pxh"
                        android:layout_weight="0.97"
                        android:layout_width="0dp"
                        android:theme="@style/searchViewSearchBar"
                        app:iconifiedByDefault="false"
                        app:queryBackground="@android:color/transparent"
                        app:queryHint="@string/lbl_search" app:searchIcon="@drawable/img_search"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <TextView android:ellipsize="end"
                android:id="@+id/txtExploreTopics"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{customSearchVM.customSearchModel.txtExploreTopics}"
                style="@style/txtPoppinsbold20" tools:text="@string/lbl_explore_topics"/>
            <TextView android:ellipsize="end" android:id="@+id/txtBooks"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{customSearchVM.customSearchModel.txtBooks}"
                style="@style/txtPoppinsregular20" tools:text="@string/lbl_diy"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtFiction"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{customSearchVM.customSearchModel.txtFiction}"
                style="@style/txtPoppinsregular20" tools:text="@string/lbl_car_issues"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtComics"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{customSearchVM.customSearchModel.txtComics}"
                style="@style/txtPoppinsregular20" tools:text="@string/lbl_finance"/>
            <TextView android:ellipsize="end" android:id="@+id/txtArt"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{customSearchVM.customSearchModel.txtArt}"
                style="@style/txtPoppinsregular20" tools:text="@string/lbl_user_guides"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtVisualDesign"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{customSearchVM.customSearchModel.txtVisualDesign}"
                style="@style/txtPoppinsregular20" tools:text="@string/lbl_family"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTechnology"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{customSearchVM.customSearchModel.txtTechnology}"
                style="@style/txtPoppinsregular20" tools:text="@string/lbl_health"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtScience"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{customSearchVM.customSearchModel.txtScience}"
                style="@style/txtPoppinsregular20" tools:text="@string/lbl_job_search"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtBusiness"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{customSearchVM.customSearchModel.txtBusiness}"
                style="@style/txtPoppinsregular20" tools:text="@string/lbl_resume"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPsychology"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{customSearchVM.customSearchModel.txtPsychology}"
                style="@style/txtPoppinsregular20" tools:text="@string/lbl_art"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtCreativity"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{customSearchVM.customSearchModel.txtCreativity}"
                style="@style/txtPoppinsregular20" tools:text="@string/lbl_app"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtEducation"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{customSearchVM.customSearchModel.txtEducation}"
                style="@style/txtPoppinsregular20" tools:text="@string/lbl_motivation"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtFeminism"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{customSearchVM.customSearchModel.txtFeminism}"
                style="@style/txtPoppinsregular20" tools:text="@string/lbl_social"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtArtificialInte"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{customSearchVM.customSearchModel.txtArtificialInte}"
                style="@style/txtPoppinsregular20" tools:text="@string/lbl_how_to_s"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtHealth"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{customSearchVM.customSearchModel.txtHealth}"
                style="@style/txtPoppinsregular20" tools:text="@string/lbl_salary"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDesign"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{customSearchVM.customSearchModel.txtDesign}"
                style="@style/txtPoppinsregular20" tools:text="@string/lbl_tricks"/>
        </LinearLayout>
    </FrameLayout>
</layout>
